--- a/UI/index.html
+++ b/UI/index.html
@@ -26,7 +26,7 @@
                 text: 'Tweet Analysis'
             },
             subtitle : {
-                text: 'Top 10 hashtags'
+                text: 'Top 10 hashtags with keyword: Trump'
             },
             xAxis : {
                 categories: hashtags,
@@ -91,7 +91,7 @@
                 text: '  '
             },
             subtitle : {
-                text: 'Top 10 Mentions'
+                text: 'Top 10 Mentions with keyword: Trump'
             },
             xAxis : {
                 categories: mentions,
